[gd_scene load_steps=3 format=3 uid="uid://d0gy5xejuwvvm"]

[ext_resource type="Script" uid="uid://4ufnt4uh87di" path="res://examples/manual_ticking/manual_ticking.gd" id="1_trv3u"]
[ext_resource type="AttributeSet" uid="uid://bwhjuw1lmci26" path="res://examples/diablo_like_stats_panel/diablo_like_stats_panel_attribute_set.tres" id="2_6xsa1"]

[node name="ManualTicking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trv3u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AttributeValueLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attribute value {0}"

[node name="BuffsAppliedLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Buffs applied"

[node name="BuffsVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="TurnControlVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/TurnControlVBoxContainer"]
layout_mode = 2

[node name="TurnDurationSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer/TurnControlVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
suffix = "turns"

[node name="ApplyBuffButton" type="Button" parent="VBoxContainer/HBoxContainer/TurnControlVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Apply buff"

[node name="EndTurnButton" type="Button" parent="VBoxContainer/HBoxContainer/TurnControlVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "End turn"

[node name="AttributeContainer" type="AttributeContainer" parent="."]
attribute_set = ExtResource("2_6xsa1")
manual_ticking = true
